@@ -15,6 +15,7 @@
 	all : fixed errors on final vars modification with `+=`, `*=` etc operations (#10325)
 	all : fixed hanging of MainLoop.add on threaded targets (#10308, #10329)
 	all : fixed compiler crash when resolving overloads with not enough arguments (#10434)
+	all : fixed non-static `@:to` methods on `@:multiType` abstracts (#10145)
 	analyzer : fixed analyzer on overloads (#10405)
 	analyzer : fixed issues with fields initialization expressions (#10405)
 	display : improved code completion in anonymous objects declarations (#10414)
